# mecab

mecab/: CMakeLists.txt
